tests/paczka1/fuzzy1/76232865.err
Error in line 8: jDrFjp S348 11,9
Error in line 24: VVeRxrs A963 64,3
Error in line 28: VVeRxrs S348 83,5
